apps/production/sinan-portfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: prod
  name: sinan-portfolio-service
spec:
  selector:
    app: sinan-portfolio
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
